--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,25 +21,26 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9
+
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: "20"
-          cache: "npm"
+          cache: "pnpm"
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
 
       - name: Install dependencies
-        run: |
-          npm config set fetch-retries 5
-          npm config set fetch-retry-mintimeout 20000
-          npm config set fetch-retry-maxtimeout 120000
-          npm install --prefer-offline --no-audit --progress=false
-        timeout-minutes: 10
+        run: pnpm install --frozen-lockfile=false
+        timeout-minutes: 5
 
       - name: Build with Next.js
-        run: npm run build
+        run: pnpm run build
         env:
           DEPLOY_TARGET: github
 
